// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog component renders closed 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-root-199 ColorPair-white-200"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-root-185 Dialog-bg-white-192 Dialog-width-md-196"
      >
        <div
          class="Dialog-header-186"
        >
          <h3
            class="MuiTypography-root Dialog-title-187 Dialog-title-187 Typography-root-225 Typography-underline-227 MuiTypography-h3"
            data-testid="typography"
          >
            Heading
          </h3>
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root IconButton-root-244 iconButton IconButton-medium-250 IconButton-text-246 Dialog-iconButton-188"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Dialog-content-189"
        >
          Some content
        </div>
        <div
          class="Dialog-actions-190"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-233 MuiButton-contained Button-contained-235 Dialog-actionButton-191 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-236"
            >
              Close
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Dialog component renders correctly 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-root-15 ColorPair-white-16"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-root-1 Dialog-bg-white-8 Dialog-width-md-12"
      >
        <div
          class="Dialog-header-2"
        >
          <h3
            class="MuiTypography-root Dialog-title-3 Dialog-title-3 Typography-root-41 Typography-underline-43 MuiTypography-h3"
            data-testid="typography"
          >
            Heading
          </h3>
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root IconButton-root-60 iconButton IconButton-medium-66 IconButton-text-62 Dialog-iconButton-4"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Dialog-content-5"
        >
          Some content
        </div>
        <div
          class="Dialog-actions-6"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-49 MuiButton-contained Button-contained-51 Dialog-actionButton-7 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-52"
            >
              Close
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Dialog component renders without a heading 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-root-267 ColorPair-white-268"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-root-253 Dialog-bg-white-260 Dialog-width-md-264"
      >
        <div
          class="Dialog-header-254"
        >
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root IconButton-root-304 iconButton IconButton-medium-310 IconButton-text-306 Dialog-iconButton-256"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Dialog-content-257"
        >
          Some content
        </div>
        <div
          class="Dialog-actions-258"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-293 MuiButton-contained Button-contained-295 Dialog-actionButton-259 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-296"
            >
              Close
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Dialog component renders without close icon 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-root-151 ColorPair-white-152"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-root-137 Dialog-bg-white-144 Dialog-width-md-148"
      >
        <div
          class="Dialog-header-138"
        >
          <h3
            class="MuiTypography-root Dialog-title-139 Dialog-title-139 Typography-root-177 Typography-underline-179 MuiTypography-h3"
            data-testid="typography"
          >
            Heading
          </h3>
        </div>
        <div
          class="Dialog-content-141"
        >
          Some content
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Dialog component renders without confirm label 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ColorPair-root-83 ColorPair-white-84"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="Dialog-root-69 Dialog-bg-white-76 Dialog-width-md-80"
      >
        <div
          class="Dialog-header-70"
        >
          <h3
            class="MuiTypography-root Dialog-title-71 Dialog-title-71 Typography-root-109 Typography-underline-111 MuiTypography-h3"
            data-testid="typography"
          >
            Heading
          </h3>
          <button
            aria-label="Close"
            class="MuiButtonBase-root MuiIconButton-root IconButton-root-128 iconButton IconButton-medium-134 IconButton-text-130 Dialog-iconButton-72"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="Dialog-content-73"
        >
          Some content
        </div>
        <div
          class="Dialog-actions-74"
        />
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
